<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.levirchianca.jogodamemoria.Tela3">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Fim"
        android:id="@+id/textView6"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="\@@@@@"
        android:id="@+id/textView7"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="49dp"
        android:layout_below="@+id/textView6"
        android:layout_alignEnd="@+id/textView6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Venceu"
        android:id="@+id/textView8"
        android:layout_alignTop="@+id/textView7"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="68dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Placar"
        android:id="@+id/textView9"
        android:layout_marginTop="57dp"
        android:layout_below="@+id/textView8"
        android:layout_toStartOf="@+id/textView10"
        android:layout_marginEnd="21dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Joaõ"
        android:id="@+id/textView10"
        android:layout_alignTop="@+id/textView9"
        android:layout_alignEnd="@+id/textView7" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Pedro"
        android:id="@+id/textView11"
        android:layout_marginStart="27dp"
        android:layout_alignTop="@+id/textView12"
        android:layout_toEndOf="@+id/textView12" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="1 x 0"
        android:id="@+id/textView12"
        android:layout_alignTop="@+id/textView10"
        android:layout_alignStart="@+id/textView8" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reiniciar"
        android:id="@+id/button3"
        android:layout_marginBottom="163dp"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/textView6" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NovoJogo"
        android:id="@+id/button4"
        android:layout_marginTop="46dp"
        android:layout_alignTop="@+id/button3"
        android:layout_alignStart="@+id/button3"
        android:layout_alignEnd="@+id/textView6" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Sair"
        android:id="@+id/button5"
        android:layout_below="@+id/button4"
        android:layout_alignStart="@+id/button4"
        android:layout_alignEnd="@+id/textView6" />

</RelativeLayout>
